# hanabi

./: .gitignore  README.md  test_proj.ipynb
.devcontainer/latex/: devcontainer.json
.devcontainer/torch/: Dockerfile  devcontainer.json
Paper/: honors.bib  main.aux  main.bbl  main.blg  main.out  main.run.xml  main.tex
Paper/sections/: abstract.tex  background.tex  conclusion.tex  introduction.tex  literature.tex  methods.tex  results.tex
Paper/tables/: alg_comparison.aux  alg_comparison.tex  training.tex  xp_matrix.aux  xp_matrix.tex
best_models/: xp_results.txt
hanabi/: pyproject.toml
hanabi/src/agent/: base.py
hanabi/src/agent/dqn/: agent.py
hanabi/src/env/: play.py
hanabi/src/hanabi/agent/dqn/: net.py  train.py
hanabi/src/hanabi/agents/: dqn.py  rand.py
hanabi/src/hanabi/env/: environment.py
hanabi/src/hanarl/: __main__.py  configs.py
hanabi/src/hanarl/configs/: __init__.py  dqn.py  rainbow.py  sad.py
hanabi/src/hanarl/dqn/: agent.py  policy.py  train.py
hanabi/src/hanarl/env/: batch_runner.py  environment.py  run.py
hanabi/src/hanarl/utils/: __init__.py
notebooks/: torchrl.test.ipynb
