[project]
name = "hanabi"
description = "A collection of reinforcement learning agents for the game of Hanabi."
version = "0.1.0"
# Torch, torchrl pettingzoo[classic], tensordict
dependencies = [
    "torch==2.4.0",
    "pettingzoo[classic]==1.24.3",
    "tensordict==0.5.0",
    "torchrl==0.5.0",
    "wandb==0.17.0",
]


# [tool.ruff]
# line-length = 100
# indent-width = 4

# [tool.ruff.format]
# quote-style = "double"
# indent-style = "space"
# line-ending = "auto"

# [tool.ruff.lint]
# select = [
#     "F",   # pyflakes
#     "E",   # pycodestyle
#     "I",   # isort
#     "ANN", # flake8 type annotations
#     "RUF", # ruff-specific rules
# ]
# fixable = ["ALL"]

# [tool.ruff.lint.pydocstyle]
# convention = "google"

# [tool.mypy]
# python_version = "3.12"
# warn_return_any = true
# disallow_untyped_defs = true
