[project]
name = "hanabi"
description = "A collection of reinforcement learning agents for the game of Hanabi."
version = "0.1.0"
# Torch, torchrl pettingzoo[classic], tensordict
dependencies = [
    "torch==2.4.0",
    "pettingzoo[classic]==1.24.3",
    "tensordict==0.5.0",
    "torchrl==0.5.0",
    "wandb==0.17.0",
    "tqdm==4.66.5",
    "pandas==2.2.2",
    "numpy==1.26.3",
]
requires-python = ">=3.9"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
